Add no FPU patchset

--- a/configs/linux_defconfig
+++ b/configs/linux_defconfig
@@ -1,5 +1,6 @@
 CONFIG_DEFAULT_HOSTNAME="ucbvax"
 # CONFIG_CROSS_MEMORY_ATTACH is not set
+CONFIG_FPU=n
 CONFIG_NAMESPACES=y
 CONFIG_BLK_DEV_INITRD=y
 CONFIG_INITRAMFS_SOURCE="${BR_BINARIES_DIR}/rootfs.cpio"
