--- a/configs/buildroot_defconfig
+++ b/configs/buildroot_defconfig
@@ -12,9 +12,9 @@ BR2_TOOLCHAIN_EXTERNAL_CUSTOM_GLIBC=y
 BR2_TOOLCHAIN_EXTERNAL_CXX=y
 BR2_LINUX_KERNEL=y
 BR2_LINUX_KERNEL_CUSTOM_VERSION=y
-BR2_LINUX_KERNEL_CUSTOM_VERSION_VALUE="4.19-rc5"
+BR2_LINUX_KERNEL_CUSTOM_VERSION_VALUE="4.19-rc6"
+BR2_LINUX_KERNEL_PATCH="../riscv-alan-01.patch ../riscv-alan-02.patch ../riscv-alan-03.patch ../riscv-alan-04.patch ../riscv-alan-05.patch"
 BR2_LINUX_KERNEL_USE_CUSTOM_CONFIG=y
 BR2_LINUX_KERNEL_CUSTOM_CONFIG_FILE="../configs/linux_defconfig"
 BR2_TARGET_ROOTFS_INITRAMFS=y
 # BR2_TARGET_ROOTFS_TAR is not set
-# BR2_TARGET_RISCV_PK=y
